--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><span></span><div></div></li>
             <li><span></span><div></div></li>
 		</ul>
-		<h1><img src='http://i.imgur.com/OUoe8dX.png' width="25%" height="25%"></h1>
+		<h1><img src='http://i.imgur.com/OUoe8dX.png' width="25%"></h1>
     <h3>Come be a part of our family</h3>
 		<div class="et-hero-tabs-container">
       <a class="et-hero-tab" href="#tab-es6">Our Mission</a>
