--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-  <html>
-  <head>
-  <script src="script.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-  <!-- Hero -->
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>OBGYN Associates - Madison and Decatur OBGYN</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+    <!-- Hero -->
   <section class="et-hero-tabs">
     <ul class="cb-slideshow">
 						<li><span></span><div></div></li>
@@ -49,5 +58,9 @@
       <h3>Google maps stuff here</h3>
     </section>
   </main>
-  </body>
-  </html>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+
+    <script src="js/index.js"></script>
+
+</body>
+</html>
